# Snake_Game

./: .gitignore  CMakeLists.txt
Snake_Game/: Controller.cpp  Controller.h  Field.cpp  Field.h  LevelConfig.h  Memento.cpp  Memento.h  Snake.cpp  Snake.h  Snake_Game.cpp  Statistics.cpp  Statistics.h  Strategy.cpp  Strategy.h  Structs.h  Test.cpp  View.cpp  View.h
Snake_Game/Config/: ConfigEasy.txt  ConfigHard.txt  ConfigNormal.txt
Snake_Game/Config/Saves/: Example.txt
